--- a/settings.conf
+++ b/settings.conf
@@ -10,9 +10,9 @@ wallet_port="7333"			// Your coins main port #
 explorer_url=""	// changeit Set to a block explorer url that returns the current block height. Leave blank to default to the block_count value below
 second_explorer_url=""	// changeit A 2nd block explorer url to be used as a backup in the event that the 1st block explorer is unreachable
 explorer_requery_seconds="60" // Used in conjunction with the explorer_url and second_explorer_url parameters. This represents the total amount of time to wait in seconds before re-getting the current block height value from the block explorer api url(s). Typically it is recommended to set this value to the average amount of seconds that your blockchain takes to find a new block.
-block_count="0"	// changeit A node cannot be considered "good" unless it has a block height equal to or greater than this value. This value is only used if both explorer_url and second_explorer_url are left blank or when the explorer(s) cannot be contacted
-seed_1="node.bitcoincoreseed.de" // At least one valid seed ip address is required to begin crawling the network
-seed_2=""
+block_count="16000"	// changeit A node cannot be considered "good" unless it has a block height equal to or greater than this value. This value is only used if both explorer_url and second_explorer_url are left blank or when the explorer(s) cannot be contacted
+seed_1="198.177.124.159" // At least one valid seed ip address is required to begin crawling the network
+seed_2="203.161.43.165"
 seed_3=""
 seed_4=""
 seed_5=""
@@ -21,7 +21,7 @@ seed_7=""
 seed_8=""
 seed_9=""
 seed_10=""
-cf_domain="" // changeit
+cf_domain="" // change it
 cf_domain_prefix=""
 cf_username=""
 cf_api_key=""
