--- a/settings.conf
+++ b/settings.conf
@@ -2,10 +2,10 @@ protocol_version="70016"	// Typically you can find the protocol version in your 
 init_proto_version="209"	// Typically you can find the init protocol version in your coins version.h file
 min_peer_proto_version="31800"	// Typically you can find the minimum peer protocol version in your coins version.h file. Leave this value blank or set it to the same value as protocol_version if this setting does not exist in your blockchain
 caddr_time_version="0"	// No longer used by bitcoin and some other modern cryptocurrencies. Set to blank "" or 0 if not used for your blockchain. Typically you can find the caddr_time_version in your coins version.h file if it exists
-pchMessageStart_0 = "0xf8"	// Typically you can find the 4 pchMessageStart values in your coins main.cpp or chainparams.cpp file
-pchMessageStart_1 = "0xbd"
-pchMessageStart_2 = "0xb3"
-pchMessageStart_3 = "0xd8"
+pchMessageStart_0 = "0xf7"	// Typically you can find the 4 pchMessageStart values in your coins main.cpp or chainparams.cpp file
+pchMessageStart_1 = "0xbc"
+pchMessageStart_2 = "0xb2"
+pchMessageStart_3 = "0xd7"
 wallet_port="7333"			// Your coins main port #
 explorer_url=""	// changeit Set to a block explorer url that returns the current block height. Leave blank to default to the block_count value below
 second_explorer_url=""	// changeit A 2nd block explorer url to be used as a backup in the event that the 1st block explorer is unreachable
