--- a/settings.conf
+++ b/settings.conf
@@ -2,15 +2,15 @@ protocol_version="70016"	// Typically you can find the protocol version in your 
 init_proto_version="209"	// Typically you can find the init protocol version in your coins version.h file
 min_peer_proto_version="31800"	// Typically you can find the minimum peer protocol version in your coins version.h file. Leave this value blank or set it to the same value as protocol_version if this setting does not exist in your blockchain
 caddr_time_version="0"	// No longer used by bitcoin and some other modern cryptocurrencies. Set to blank "" or 0 if not used for your blockchain. Typically you can find the caddr_time_version in your coins version.h file if it exists
-pchMessageStart_0 = "0xf7"	// Typically you can find the 4 pchMessageStart values in your coins main.cpp or chainparams.cpp file
-pchMessageStart_1 = "0xbc"
-pchMessageStart_2 = "0xb2"
-pchMessageStart_3 = "0xd7"
+pchMessageStart_0 = "0xef"	// Typically you can find the 4 pchMessageStart values in your coins main.cpp or chainparams.cpp file
+pchMessageStart_1 = "0xb4"
+pchMessageStart_2 = "0xaa"
+pchMessageStart_3 = "0xcf"
 wallet_port="7333"			// Your coins main port #
 explorer_url=""	// changeit Set to a block explorer url that returns the current block height. Leave blank to default to the block_count value below
 second_explorer_url=""	// changeit A 2nd block explorer url to be used as a backup in the event that the 1st block explorer is unreachable
 explorer_requery_seconds="60" // Used in conjunction with the explorer_url and second_explorer_url parameters. This represents the total amount of time to wait in seconds before re-getting the current block height value from the block explorer api url(s). Typically it is recommended to set this value to the average amount of seconds that your blockchain takes to find a new block.
-block_count="16000"	// changeit A node cannot be considered "good" unless it has a block height equal to or greater than this value. This value is only used if both explorer_url and second_explorer_url are left blank or when the explorer(s) cannot be contacted
+block_count="0"	// changeit A node cannot be considered "good" unless it has a block height equal to or greater than this value. This value is only used if both explorer_url and second_explorer_url are left blank or when the explorer(s) cannot be contacted
 seed_1="198.177.124.159" // At least one valid seed ip address is required to begin crawling the network
 seed_2="203.161.43.165"
 seed_3=""
